--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "express": "~4.12.2",
     "morgan": "~1.5.1",
     "pg": "^4.3.0",
+    "pg-cursor": "^1.0.0",
     "request": "^2.53.0",
     "serve-favicon": "~2.2.0"
   }
