--- a/package.json
+++ b/package.json
@@ -7,12 +7,15 @@
   },
   "dependencies": {
     "async": "^0.9.0",
+    "bcrypt": "^0.8.1",
     "body-parser": "~1.12.0",
     "cookie-parser": "~1.3.4",
     "debug": "~2.1.1",
     "ejs": "~2.3.1",
     "express": "~4.12.2",
     "morgan": "~1.5.1",
+    "passport": "^0.2.1",
+    "passport-local": "^1.0.0",
     "pg": "^4.3.0",
     "pg-cursor": "^1.0.0",
     "request": "^2.53.0",
